quick fix to show company name on employees

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,7 +4,7 @@
       "title": "Businesses"
     },
     "employees": {
-      "title": "Employees"
+      "title": "Employees of"
     }
   },
   "components": {
