--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -4,7 +4,7 @@
       "title": "Compañías"
     },
     "employees": {
-      "title": "Empleados"
+      "title": "Trabajadores de"
     }
   },
   "components": {
